--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -248,6 +248,15 @@
      "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:imageio:Lossy conversion from float64 to uint8. Range [-3808.0, 3843.0]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "WARNING:imageio:Lossy conversion from float64 to uint8. Range [-3840.0, 3893.0]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "WARNING:imageio:Lossy conversion from float64 to uint8. Range [-3776.0, 3850.0]. Convert image to uint8 prior to saving to suppress this warning.\n"
+     ]
     }
    ],
    "source": [
