update analysis scripts

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image layer 'raw' at 0x17a8739dd30>"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "img = tf.imread(fname)\n",
     "\n",
@@ -70,7 +59,9 @@
     "img = img.astype(np.float64)\n",
     "\n",
     "viewer.dims.axis_labels = (\"z\", \"y\", \"x\")\n",
-    "viewer.add_image(img, name=\"raw\")"
+    "viewer.add_image(img, name=\"raw\")\n",
+    "\n",
+    "corrected_img_stack = []"
    ]
   },
   {
@@ -82,15 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shift down by 5 rows\n",
-      "Shift up by 145 rows\n"
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\lukas\\Code\\theia\\notebooks\\analysis.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Code/theia/notebooks/analysis.ipynb#ch0000006?line=31'>32</a>\u001b[0m err_factor_y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere(err_y_down \u001b[39m==\u001b[39m vertex_down)[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Code/theia/notebooks/analysis.ipynb#ch0000006?line=32'>33</a>\u001b[0m \u001b[39m# correction_y = img[i][:-err_factor_y] - img[-i-1][err_factor_y:]\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/lukas/Code/theia/notebooks/analysis.ipynb#ch0000006?line=33'>34</a>\u001b[0m corrected_img_stack[i] \u001b[39m=\u001b[39m img[i][:\u001b[39m-\u001b[39merr_factor_y]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Code/theia/notebooks/analysis.ipynb#ch0000006?line=34'>35</a>\u001b[0m corrected_img_stack[\u001b[39m-\u001b[39mi\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m=\u001b[39m img[\u001b[39m-\u001b[39mi\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][err_factor_y:]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/lukas/Code/theia/notebooks/analysis.ipynb#ch0000006?line=35'>36</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mShift down by \u001b[39m\u001b[39m{\u001b[39;00merr_factor_y\u001b[39m}\u001b[39;00m\u001b[39m rows\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence."
      ]
     }
    ],
@@ -128,14 +125,14 @@
     "    if vertex_down < vertex_up:\n",
     "        err_factor_y = np.where(err_y_down == vertex_down)[0][0]\n",
     "        # correction_y = img[i][:-err_factor_y] - img[-i-1][err_factor_y:]\n",
-    "        # img[i] = img[i][:-err_factor_y]\n",
-    "        # img[-i-1] = img[-i-1][err_factor_y:]\n",
+    "        corrected_img_stack[i] = img[i][:-err_factor_y]\n",
+    "        corrected_img_stack[-i-1] = img[-i-1][err_factor_y:]\n",
     "        print(f\"Shift down by {err_factor_y} rows\")\n",
     "    else:\n",
     "        err_factor_y = np.where(err_y_up == vertex_up)[0][0]\n",
     "        # correction_y = img[i][err_factor_y:] - img[-i-1][:-err_factor_y]\n",
-    "        # img[i] = img[i][err_factor_y:]\n",
-    "        # img[-i-1] = img[-i-1][:-err_factor_y]\n",
+    "        corrected_img_stack[i] = img[i][err_factor_y:]\n",
+    "        corrected_img_stack[-i-1] = img[-i-1][:-err_factor_y]\n",
     "        print(f\"Shift up by {err_factor_y} rows\")"
    ]
   },
