confirm stable code set after major hardware debugging session

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -58,6 +58,7 @@
     "# convert to floating point\n",
     "img = img.astype(np.float64)\n",
     "\n",
+    "# rearrange stack as list for easier manipulation\n",
     "proc = []\n",
     "for i in range(img.shape[0]):\n",
     "    proc.append(img[i])"
@@ -83,7 +84,8 @@
     "    err_baseline = np.sqrt(np.sum(np.square(subtraction)))\n",
     "\n",
     "    # shift images by a fraction of original shape\n",
-    "    shift_y = math.trunc(img.shape[1]/10)\n",
+    "    # shift_y = math.trunc(img.shape[1]/20)\n",
+    "    shift_y = 200\n",
     "\n",
     "    err_y_down = np.empty((shift_y), dtype=np.float64)\n",
     "    err_y_up = np.empty((shift_y), dtype=np.float64)\n",
@@ -111,27 +113,34 @@
     "        # correction_y = img[i][:-err_factor_y] - img[-i-1][err_factor_y:]\n",
     "        proc[i] = proc[i][:-err_factor_y]\n",
     "        proc[-i-1] = proc[-i-1][err_factor_y:]\n",
-    "        print(f\"Shift down by {err_factor_y} rows\")\n",
+    "        print(\n",
+    "            f\"Remove {err_factor_y} rows from the bottom of plane {i} and \"\n",
+    "            f\"top of plane {len(proc) -i -1}\"\n",
+    "        )\n",
     "    else:\n",
     "        err_factor_y = np.where(err_y_up == vertex_up)[0][0]\n",
     "        # correction_y = img[i][err_factor_y:] - img[-i-1][:-err_factor_y]\n",
     "        proc[i] = proc[i][err_factor_y:]\n",
     "        proc[-i-1] = proc[-i-1][:-err_factor_y]\n",
-    "        print(f\"Shift up by {err_factor_y} rows\")"
+    "        print(\n",
+    "            f\"Remove {err_factor_y} rows from the top of plane {i} and \"\n",
+    "            f\"bottom of plane {len(proc) -i -1}\"\n",
+    "        )\n",
+    "    \n",
+    "    err_y = np.append(np.flip(err_y_down), err_y_up[1:])\n",
+    "\n",
+    "    # plot data\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    ax.plot(np.linspace(-shift_y, shift_y-1, num=shift_y*2-1), err_y)\n",
+    "    # fig.savefig(\"error_y.jpg\", bbox_inches=\"tight\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "err_y = np.append(np.flip(err_y_down), err_y_up[1:])\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_axes([0, 0, 1, 1])\n",
-    "ax.plot(np.linspace(-shift_y, shift_y-1, num=shift_y*2-1), err_y)\n",
-    "# fig.savefig(\"error_y.jpg\", bbox_inches=\"tight\")"
+    "Find the column shift that produces the lowest error."
    ]
   },
   {
@@ -146,7 +155,8 @@
     "\n",
     "    err_baseline = np.sqrt(np.sum(np.square(subtraction)))\n",
     "\n",
-    "    shift_x = math.trunc(img.shape[2]/10)\n",
+    "    # shift_x = math.trunc(img.shape[2]/20)\n",
+    "    shift_x = 50\n",
     "\n",
     "    err_x_left = np.empty((shift_x), dtype=np.float64)\n",
     "    err_x_right = np.empty((shift_x), dtype=np.float64)\n",
@@ -174,27 +184,34 @@
     "        # correction_x = img[i][:, err_factor_x:] - img[-i-1][:, :-err_factor_x]\n",
     "        proc[i] = proc[i][:, err_factor_x:]\n",
     "        proc[-i-1] = proc[-i-1][:, :-err_factor_x]\n",
-    "        print(f\"Shift right by {err_factor_x} columns\")\n",
+    "        print(\n",
+    "            f\"Remove {err_factor_x} cols from the left of plane {i} and \"\n",
+    "            f\"right of plane {len(proc) -i -1}\"\n",
+    "        )\n",
     "    else:\n",
     "        err_factor_x = np.where(err_x_left == vertex_left)[0][0]\n",
     "        # correction_x = img[i][:, :-err_factor_x] - img[-i-1][:, err_factor_x:]\n",
     "        proc[i] = proc[i][:, :-err_factor_x]\n",
     "        proc[-i-1] = proc[-i-1][:, err_factor_x:]\n",
-    "        print(f\"Shift right by {err_factor_x} columns\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "err_x = np.append(np.flip(err_x_right), err_x_left[1:])\n",
+    "        print(\n",
+    "            f\"Remove {err_factor_x} cols from the right of plane {i} and \"\n",
+    "            f\"left of plane {len(proc) -i -1}\"\n",
+    "        )\n",
+    "    \n",
+    "    err_x = np.append(np.flip(err_x_right), err_x_left[1:])\n",
     "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_axes([0, 0, 1, 1])\n",
-    "ax.plot(np.linspace(-shift_x, shift_x-1, num=shift_x*2-1), err_x)\n",
-    "# fig.savefig(\"error_x.jpg\", bbox_inches=\"tight\")"
+    "    # plot data\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_axes([0, 0, 1, 1])\n",
+    "    ax.plot(np.linspace(-shift_x, shift_x-1, num=shift_x*2-1), err_x)\n",
+    "    # fig.savefig(\"error_x.jpg\", bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crop image layers to match smallest size."
    ]
   },
   {
@@ -203,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shape = proc[0].shape\n",
+    "shape = list(proc[0].shape)\n",
     "\n",
     "for i in proc:\n",
     "    if i.shape[0] < shape[0]:\n",
@@ -215,20 +232,33 @@
     "    if proc[i].shape[0] > shape[0]:\n",
     "        diff = proc[i].shape[0] - shape[0]\n",
     "\n",
-    "        if diff % 2:\n",
-    "            proc[i] = proc[i][int(diff/2)+1:int(-diff/2)]\n",
+    "        if diff == 1:\n",
+    "            proc[i] = proc[i][:-1]\n",
     "        else:\n",
-    "            proc[i] = proc[i][diff/2:-diff/2]\n",
+    "            if diff % 2:\n",
+    "                proc[i] = proc[i][int(diff/2)+1:int(-diff/2)]\n",
+    "            else:\n",
+    "                proc[i] = proc[i][int(diff/2):int(-diff/2)]\n",
     "        \n",
     "    if proc[i].shape[1] > shape[1]:\n",
     "        diff = proc[i].shape[1] - shape[1]\n",
     "\n",
-    "        if diff % 2:\n",
-    "            proc[i] = proc[i][:, int(diff/2)+1:int(-diff/2)]\n",
+    "        if diff == 1:\n",
+    "            proc[i] = proc[i][:, :-1]\n",
     "        else:\n",
-    "            proc[i] = proc[i][:, diff/2:-diff/2]\n",
+    "            if diff % 2:\n",
+    "                proc[i] = proc[i][:, int(diff/2)+1:int(-diff/2)]\n",
+    "            else:\n",
+    "                proc[i] = proc[i][:, int(diff/2):int(-diff/2)]\n",
     "\n",
     "proc_stack = np.stack(proc, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Show in Viewer."
    ]
   },
   {
@@ -248,7 +278,7 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "723a27611bb7231e2098e9e2644e5e0594c1d2c79417bab39597b248980abdcc"
+   "hash": "7a145e7c3ab50dc882859de0569435773ac1edf6b29fc2499343759523a35c64"
   },
   "kernelspec": {
    "display_name": "Python 3.9.6 64-bit (system)",
